--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,11 @@
-RewriteEngine on
+RewriteEngine On
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
+Header always set Content-Security-Policy "upgrade-insecure-requests;"
+
+
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(index\.php|uploads|images|utils|public|robots\.txt)
-RewriteRule ^(.*)$ /benitan/index.php/$1 [L]
+RewriteRule ^(.*)$ index.php/$1 [L]
